# smart-things

./: CMakeLists.txt  LICENSE  Makefile  README.md  module.cmake  modules.json  package.json
inc/: things_types.h
lib/: smartthings_native.iotjs
lib/smartthings/: index.js  smartthings_native.iotjs
samples/: device_def.json  speaker.js
samples/audio/: index.js
samples/lamp/: index.js
src/: iotjs_module_smartthings.c  iotjs_module_smartthings.h  iotjs_module_st_getmessage.c  iotjs_module_st_getmessage.h  iotjs_module_st_magic_strings.h  iotjs_module_st_representation.c  iotjs_module_st_representation.h  iotjs_module_st_setmessage.c  iotjs_module_st_setmessage.h
src/js/: smart-things.js
